[metadata]
name = ez_zarr
description = Give easy, high-level access to ome-zarr filesets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-basel/gbioinfo-ez_zarr
author = Silvia Barbiero, Michael Stadler
author_email = silvia.barbiero@fmi.ch, michael.stadler@fmi.ch
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/fmi-basel/gbioinfo-ez_zarr/issues
    Documentation = https://github.com/fmi-basel/gbioinfo-ez_zarr#README.md
    Source Code = https://github.com/fmi-basel/gbioinfo-ez_zarr
    User Support = https://github.com/fmi-basel/gbioinfo-ez_zarr/issues

[options]
packages = find:
install_requires =
    anndata
    dask
    matplotlib
    numpy
    pandas
    tifffile
    zarr
python_requires = >=3.9
package_dir =
    = src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
